feat(inventory): add managed materials and editable stock transactions